--- a/cyberfoxAlbetross.css
+++ b/cyberfoxAlbetross.css
@@ -61,7 +61,7 @@
 #app-mount .app-2rEoOp {
   background-color: transparent;
   background-size: cover;
-  background-image: url(http://bowmanfox.xyz/xana_as.png);
+  background-image: url(https://images.ctfassets.net/lzny33ho1g45/learn-html-css-p-img/12978ef50623cf76538cfe18e1011fc5/file.png?w=1520&fm=jpg&q=30&fit=thumb&h=760);
 
 }
  /* *This is my IP. I request for you to use integrity and not to attack my main internet connection without prior authorization for pen testing, I am figuring out how to obscure it or I will implement a IPS to mitigate threats. In the mean time expect a LOT of unintentional downtime by skids.* */
